# mainframe_userstory_demo

./: Dockerfile  README.md  main.py  pyproject.toml
src/mainframe_userstory_demo/: DocumentSearch.py  MainframeJavaCodeDemoCrew.py  MainframeUserstoryDemoCrew.py  crew.py  main.py
src/mainframe_userstory_demo/config/: agents.yaml  tasks.yaml
